--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-"Hello World" 
+<!doctype html>
+<html>
+	<head>
+		<title>ProxyNeko</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Noticia+Text" rel="stylesheet">
+		<link rel="icon" type="image/png" href="assets/images/favicon.ico?v=3">
+	</head>
+	<body>
+		<div class="main">
+			<img class="avatar" src="assets/images/avatar.png">
+			<img>
+			<p class="title">Heya I'm ProxyNeko!</p>
+			<p class="subheader">I create Minecraft mods and other random things</p>
+			<div class="horizontal-seperator"></div>
+			<div class="flex-container sc-container">
+				<a class="flex-item github" href="https://github.com/proxysprojects">
+					<div class="shade">
+						<img class="button-logo" src="assets/images/github.png">
+					</div>
+				</a>
+				<a class="flex-item discord" href="https://discord.gg/fXFW52P">
+					<div class="shade">
+						<img class="button-logo" src="assets/images/discord.svg">
+					</div>
+				</a>
+				<a class="flex-item twitter" href="https://twitter.com/ProxyNeko">
+					<div class="shade">
+						<img class="button-logo" src="assets/images/twitter.svg">
+					</div>
+				</a>
+			</div>
+		</div>
+	</body>
+</html>
