Fixed the discord link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<img class="button-logo" src="assets/images/github.png">
 					</div>
 				</a>
-				<a class="flex-item discord" href="https://discord.gg/fXFW52P">
+				<a class="flex-item discord" href="https://discord.mcmoddev.com">
 					<div class="shade">
 						<img class="button-logo" src="assets/images/discord.svg">
 					</div>
