--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <br>
         <small>
-            tophat.cat © ProxyNeko 2016 - 2021. TopHat meme from Google.
+            tophatcat.dev © ProxyNeko 2016 - 2021. TopHat meme from Google.
         </small>
     </body>
 </html>
