--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>ProxyNeko</title>
+        <title>KitiCattus- tophatcat.dev</title>
         <link rel="icon" type="image/png" href="images/favicon.ico?v=3">
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
@@ -13,7 +13,7 @@
         </div>
         <br>
         <small>
-            tophatcat.dev © ProxyNeko 2016 - 2021. TopHat meme from Google.
+            tophatcat.dev © KiriCattus 2016 - 2022. TopHat meme from Google.
         </small>
     </body>
 </html>
