Updated some stuff and fixed other things.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <div id="imgcontainer">
-            <img class="center" src="images/tophatcat.jpg"
+            <img class="center" src="images/avatar.png">
         </div>
         <br>
         <small>
-            tophatcat.dev © KiriCattus 2016 - 2022. TopHat meme from Google.
+            tophatcat.dev © KiriCattus 2016 - 2022.
         </small>
     </body>
 </html>
